--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^2.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "date-fns": "^4.1.0",
     "nodemailer": "^7.0.11",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
