--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "build": "nest build",
   "start": "nest start",
   "start:dev": "nest start --watch",
-  "start:prod": "node --max-old-space-size=4096 dist/main.js"
+  "start:prod": "node --max-old-space-size=4096 dist/src/main.js"
 },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
